<resources>
    <string name="balmapp" translatable="false">BalmApp</string>
    <string name="app_name" translatable="false">BalmApp</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nueva_partida">Partida berria</string>
    <string name="modo_libre">Modu librea</string>
    <string name="modo_guiado">Modu gidatua</string>
    <string name="fin_del_juego">JOKUAREN AMAIERA</string>
    <string name="felipe_cancion_titulo">SAN FELIPE ETA SANTIAGOREN ABEZTIA</string>
    <string name="putxero_juego">PUTXERAREN JOKUA</string>
    <string name="putxero_explicacion">PUTXERAREN HISTORIA</string>
    <string name="puente_explicacion">ZUBIAREN HISTORIA</string>
    <string name="monte_explicacion">KOLITZA MENDIAREN HISTORIA</string>
    <string name="jauregi_explicacion">HORCASITAS JAUREGIAREN HISTORIA</string>
    <string name="acerca_de">HONI BURUZ</string>
    <string name="desconectar">DESKONEKTATU</string>
    <string name="puente">ZUBI ZAHARRA</string>
    <string name="kolitxa">KOLITZA MENDIA</string>
    <string name="jauregi">HORCASITAS JAUREGIA</string>
    <string name="procesion">PROZESIOA</string>
    <string name="txapela">TXAPELAREN MUSEOA</string>
    <string name="san_felipe">SAN FELIPE ABEZTIA</string>
    <string name="putxero">PUTXERA</string>
    <string name="procesion_explicacion">PROZESIOAREN HISTORIA</string>
    <string name="txtkolitza_juego_explicacion_titulo">LOTU IRUDIAK HITZEKIN</string>
    <string name="txttxapela_juego_explicacion_titulo">LOTU IRUDIAK AUDIOEKIN</string>
    <string name="txtkolitza_sopadeletras_titulo">LETRA-SOPA</string>
    <string name="txtjauregi_puzzle_titulo">JAUREGIAREN PUZZLEA</string>
    <string name="txapela_explicacion_titulo">TXAPELAREN HISTORIA</string>
    <string name="felipe_explicacion_titulo">SAN FELIPE ETA SANTIAGOREN HISTORIA</string>
    <string name="asmatu_pertsonaia">ASMATU PERTSONAIA</string>
    <string name="siguiente_adivinanda">ASMATU HURRENGOA</string>
    <string name="txt_corregir">ZUZENDU</string>
    <string name="titulo_modo">NOLA JOLASTU NAHI DUZU?</string>
    <string name="modo_profesor">IRAKASLE/A MODUA</string>
    <string name="saiatuberriz">OHHHH! SAIATU BERRIZ</string>
    <string name="dialog_zorionak">ZORIONAK! OSO ONDO!</string>
    <string name="ordenar">ORDENATU KRONOLOGIKOKI</string>
    <string name="nuevapartida">PARTIDA BERRI BAT HASI NAHI DUZU?</string>
    <string name="nuevapartidaEXPLICACION">Hasieratik hasiko da.</string>
    <string name="si">BAI</string>
    <string name="no">EZ</string>
    <string name="hurrengoa">HURRENGOA</string>
    <string name="continuar">JARRAITU</string>
    <string name="repetir">ERREPIKATU</string>
    <string name="apodo">Ezizen:</string>
    <string name="jugar">JOKATU</string>
    <string name="cambiar_modo">Modua aldatu</string>
    <string name="txt_texto_pazkoa">Pazkoa</string>
    <string name="txt_texto_bazkaria">Bazkaria</string>
    <string name="txt_texto_erromeria">Erromeria</string>
    <string name="txt_finalizar">AMAITU</string>
    <string name="txt_siguientejuego">HURRENGO JOKOA</string>
    <string name="txt_texto_Beheko_Solairuak">Beheko Solairuak</string>
    <string name="txt_texto_Erdiko_Solairua">Erdiko Solairuak</string>
    <string name="txt_texto_Azken_Solairua">Azken Solairuak</string>
    <string name="txt_texto_Fatxada">Fatxada</string>
    <string name="txt_texto_Gelak_Egongelak">Gelak eta Egongelak.</string>
    <string name="txt_texto_Balkoi">Balkoi nagusia, familiaren armarria eta 2 biga.</string>
    <string name="txt_texto_Sotoa">Sotoa eta animaliak gordetzeko lekua.</string>
    <string name="txt_texto_Gambara">Gambara</string>
    <string name="txt_tontorra">Tontorra</string>
    <string name="txt_pazkoa">Pazkoa</string>
    <string name="txt_Pentekoste">Pentekoste</string>
    <string name="txt_Erromeria">Erromeria</string>
    <string name="txt_Bazkaria">Bazkaria</string>
    <string name="txt_ermita">Ermita</string>
    <string name="explicacion_jesus">Protagonista naiz. Baina oso zorte txarra daukat. Gurutzatu egiten naute! Nor ote naiz?</string>
    <string name="opcion_1jesus">A)Judas</string>
    <string name="opcion_2jesus">B)Jose</string>
    <string name="opcion_3jesus">C)Jesus</string>
    <string name="explicacion_penitenteak">Gurutzeak garraiatzen ditut. Talde batean noa eta guztiok txanoak daramatzagu. Gainera, oinutsik goaz. Nortzuk gara?</string>
    <string name="opcion_1penitenteak">A)Penitenteak</string>
    <string name="opcion_2penitenteak">B)Erromatarrak</string>
    <string name="opcion_3penitenteak">C)Lapurrak</string>
    <string name="explicacion_maria">Pertsonaia oso oso garrantzitsu baten ama naiz. Nire semea epaitu eta gurutzatu egiten dute. Nor naiz?</string>
    <string name="opcion_1maria">A)Maria Magdalena</string>
    <string name="opcion_2maria">B)Andre Maria Birjina</string>
    <string name="opcion_3maria">C)Uso zuria</string>
    <string name="Gurutze_bidea">Gurutze bidea</string>
    <string name="Judasen_hilketa">Judas-en hilketa</string>
    <string name="Azken_afaria">Azken afaria</string>
    <string name="Jesusen_epaiketa">Jesus-en epaiketa</string>
    <string name="azalpena_sanfelipe">Maiatzaren 1ean ospatzen den "San Felipe eta Santiago" balmasedarraren elementu bereizgarriak hiru dira: santua, abestia eta txanoak. Horrez gain,  XIX. mendeko tradizio bat da, baina uste da duela urte asko baino lehen hasi zena. “San Felipe eta Santiago eguna” izaera erlijiosoa duen haur-tradizio baten barruan dago, gure arbasoetara heltzen dena. Tradizio hau, santu bat, kasu honetan, Pragako Jesus Haurra, eskaera baten aitzakia santu bezala hartzean datza.
        Urtero, maiatzaren 1eko goizean, 12 edo 13 urte arteko 4 edo 6 neska-mutilek osatutako taldeek, "San felipe taldeak", Balmasedako kaleak zeharkatzen dituzte eta horretarako, egurrezko plataforma bat eramaten dute. Bertan joaten da Pragako Jesus Haurraren irudi txikia, lorez edo adar berdez inguratuta. Balmasedako kaleak zeharkatzen dituzten bitartean, "San Felipe eta Santiago" abestiaren zati batzuk abesten dituzte. Helduei dirua eskatzen diete "San Felipe eta Santiagorako pezetatxo bat" esanez eta eskaera haurren artean banatzen da, nahi dutenean gastatzeko. </string>
    <string name="azalpena_jauregi">Lucas Horcasitas, Horcasitas jauregia eraikitzea proposatu zuen eta 1687. urtean (XVII. mendea) eraiki egin zen Balmasedan. Horcasitas jauregiari esker, Bizkaiko jauregi garrantzitsuenetarikoa eta zaharrenetarikoa eraiki zen. Jauregia Balmasedako alde zaharrean dago. Balmaseda merkataritzarako eta ekoizpenerako lekua izateko sortu zen.
    Jauregiak lau solairu ditu eta lorategi batez inguratuta dago. Beheko solairuak sotorako eta animaliak (batez ere zaldiak) gordetzeko erabiltzen ziren. Goiko solairuetan gelak eta egongelak zeuden. Azken solairuan ganbara zegoen. Azkenik, fatxadan, balkoi nagusia zegoen eta bere inguruan Horcasitas familiaren ezkutua. Balkoia bi biga handitan bermatuta zegoen, ez erortzeko.</string>
    <string name="azalpena_kolitza">Bigarren ondarea Kolitzako igoera da (erromeria herrikoia). Balmasedako Historia liburuan esaten da tradizio hau XVI. mendean hasi zela, epidemi ikaragarriak zeudelako. Kolitza mendiaren tontorrean San Sebastian ermita zegoen. Mendi horretan prozesio bat egin zen babesa eskatzeko. Baina heriotzak amaitzen ez zirela ikusita, agintariek ermitaren santutasuna indartu zuten, San Roqueri ere eskainiz. Horregatik, gaur egun, San Sebastian eta San Roque ermita izena du.
        Kolitza mendia Enkarterriko mendirik esanguratsuena da eta Bizkaiko ederrenetakoa. 879 metroko altuera du eta haranen gainean, Balmaseda, Artzentales eta Mena Haranaren arteko muga ikusten da. Bere tontorrean, San Sebastian eta San Roque ermita erromanikoa dago, XIII. edo XIV. mendean eraiki zena. Kolitza mendira Pentecostés bezperan igotzen da eta Espiritu Santuaren etorrera esan nahi du. Hau Pazko Igandea eta Jesusen Berpizkunde Igandea igaro ondoren gertatzen da.
        Erromeria hau beti larunbat batean egiten zen, Pentecostés beti igandean egiten delako. Hala ere, Balmasedako Udalak jaia larunbatera aldatzea erabaki zuen. Erromeria goizean hasten da eta ermitan meza egiten da. Meza amaitzean, landa-bazkaria prestatzen da. Ilunabarrean,
        fanfarrearen doinua entzunez jaisten da, eta gazteek, herritik igarotzean, ura eskatzen diete auzokideei. Jaiak iluntzera arte jarraitzen du.</string>
    <string name="azalpena_procesion">Balmasedako Vía Crucis Vivientea, aste santuro egiten diren prozesioei esaten zaio. Prozesio hauetan, herri honetako neska-mutilak protagonistak dira. Gaur egun, 700 pertsona baino gehiagok parte hartzen dute prozesio hauetan, batzuk tradizioak edo erlijioak eraginda, eta guztiak balmasedarrak bezala. Gainera, tradizio hau txikitatik hasten da, Santo Domingo eta La Magdalena auzoetako haurren gurutze-bideetan parte hartuz. Denboran zehar pertsonaiak eta dekorazioa hobetu dela egiaztatzen da eta tradizio hau XVII. mendetik aurrera hasi zen, gaur egunera arte mantenduz.
    Guztia Ostegun Santuko gauean hasten da, "Azken Afaria", "Baratzeko Otoitza" eta "Jesusen Printzipioa" antzezten direnean. Hurrengo egunean, hau da, Ostiral Santuan, erromatar guardiaren danborrak izango dira.
    Honen harira, hurrengo prozesioak honako hauek dira. Lehenengoa Pausoen Prozesioa, ostegun Santua. Prozesioa San Severino plazatik hasiko da. Pausoekin batera, erromatarrak eta penitenteak doaz. Azken hauek txanoak jantzita eta oinutsik doaz, lepoan gurutzeak daramatzatela. Bigarrena, egun berean, azken afaria egiten da eta honetan apaizen aurreko epaiketaren antzezpen bat egiten da.
    Bestalde, Pilatoren epaiketa egiten da, ostiral Santuan. Lehenik eta behin, Judas hilko dute. Gero, Jesusen epaiketa egingo dute eta Jesusen zigorkatzea. Egun berean, Gurutze Bidea ospatu egiten da. Magdalena, Andre Maria Birjina eta beste pertsonaia batzuk egongo dira. Bertan, Jesusek azken hitzak esango ditu, hil aurretik. Behin gurutzetik jaitsita, hilobira eramango dute.
    Horrez gain, Lurperatzen Prozesioa ere egiten da,  non pausoen eta pertsonaien itxura ilunari esker, prozesioa benetan tristea izatea lortzen den. Amaitzeko, ibilbidea San Severino plazan hasiko da eta berriro plazara itzuliko da.
    Egunari amaiera emateko, Isiltasunaren Prozesioa ospatzen da, bereziena dena. Erromatarrek laguntzen dute heriozko isiltasunean. Han, otoitz labur baten ostean, Kristoren pausoa elizaren hormetako batean jartzen da. Ibilbidea San Severino plazan hasiko da hilerrirako bidean amaituz.</string>
    <string name="txtjauregi_unir_explicacion">Lotu ezkerreko zutabean agertzen dena eskumako zutabean agertzen denarekin. Horrela solairu bakoitzean zer dagoen jakingo duzue.</string>
    <string name="juegos">Jokuak</string>
    <string name="otros">Besteak</string>
</resources>